--- a/index.html
+++ b/index.html
@@ -23,7 +23,28 @@
         <p><strong>Dan Tat</strong> as what the locals call them. We love this mildly sweet treat, and while every day is dan tat day to us, World Egg Day this Friday gives us even more reason to celebrate. Savor these eight things you might know about one of our favorite Asian desserts.
         It has English and Portuguese origins. Just as the seemingly quintessential American ketchup has Chinese origins, the seemingly quintessential Chinese dan tat actually has its roots in Great Britain and Portugal. However, both the English and Portuguese versions ultimately come from the king of pastries, France, while the egg tarts you'll find in Chinese restaurants and bakeries today are distinct from their European cousins.</p>
 
-        
+        <h3>Ingredients</h3>
+        <p>Makes 16 servings</p>
+
+        <h5>Custard Filling</h5>
+        <ul>
+            <li>4 eggs, beaten, reserve 2 tablespoons for your pastry dough</li>
+            <li>¾ cup hot water</li>
+            <li>tablespoons sugar</li> 
+            <li>⅛ teaspoon salt</li>
+            <li>¼ cup evaporated milk</li>
+            <li>a dash vanilla extract</li>
+        </ul>
+
+        <h5>Pastry Dough</h5>
+        <ul>
+            <li>2 cups  cake flour</li>
+            <li>1 stick 115 g  unsalted butter</li>
+            <li>¼ cup  powdered sugar</li> 
+            <li>2 tablespoons  egg</li>
+            <li>⅛ teaspoon  salt</li>
+            <li>a dash vanilla extract</li>
+        </ul>
 
 
         <!--[if lt IE 7]>
