Add preparation steps

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
             <li>a dash vanilla extract</li>
         </ul>
 
+        <h3>Time to make egg tarts!</h3>
+        <ol>
+            <li>For the pastry, in a large bowl, sift flour, sugar, and salt. Then add softened butter. Bring the mixture together with your hands, careful not to knead the pastry dough too much or you will make the pastry tough.</li>
+            <li>Whisk the egg yolks and add the 2 tablespoons of beaten yolk to the flour mixture. Bring together until smooth. If the dough is too sticky, coating your hands with flour will help. Cover with plastic wrap and then refrigerate for 30 minutes, or until the dough is firm.</li>
+            <li>To make the custard filling, melt sugar and salt with hot water. Mix until dissolved then let cool.</li>
+            <li>Add the rest of the beaten egg yolk. Stir in sugar water and also evaporated milk (if adding vanilla, add now). Stir and combine everything well.</li>
+            <li>Strain the filling to ensure no lumps. Chill in the refrigerator.</li>
+            <li>Preheat the oven to 400˚F / 200˚C.</li>
+            <li>Take the dough out and divide into 16 equal portions. Spray the tart pan with a light coating of oil. Take one portion of your dough and roll it into a ball and place in your tart shell. Press the shell into the pan with your fingers. Try to make the wrapper uniform in thickness and avoid a thick bottom. Repeat to finish all.</li>
+            <li>Pour the custard filling into the shells until it is about 80% full. Bake for 15 to 20 minutes until the surface becomes golden brown and a toothpick can stand in the egg tart.</li>
+            <li>Cool down for several minutes and then take the egg tarts out of the pan. Serve while still warm.</li>
+            <li>Enjoy!</li>
+        </ol>
 
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
