Make embedded video responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                         <div class="top">
                                 <h1 class="title">Hong Kong Style Egg Tarts</h1>
                                 <p class="description">That creamy filling. That flaky crust. The way it’s so easy — too easy — to eat five in one sitting. <br>The Chinese egg tart.</p>
-                                <iframe width="800" height="600" src="https://www.youtube.com/embed/fEf1cMnaPkY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                                <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/fEf1cMnaPkY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                                </div>
+                                
                         </div>
                     </header>
             <div class="row">
