Replace Ingredients bullet points with checkboxes

--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
                     
                             <h5>Custard Filling</h5>
                             <ul>
-                                <li>4 eggs, beaten, reserve 2 tablespoons for your pastry dough</li>
-                                <li>¾ cup hot water</li>
-                                <li>tablespoons sugar</li> 
-                                <li>⅛ teaspoon salt</li>
-                                <li>¼ cup evaporated milk</li>
-                                <li>a dash vanilla extract</li>
+                                <li><label><input type="checkbox" id="checkbox"><span>4 eggs beaten</span></label></li>
+                                <li><label><input type="checkbox" id="checkbox"><span>¾ cup hot water</span></label></li>
+                                <li><label><input type="checkbox" id="checkbox"><span>tablespoons sugar</span></label></li> 
+                                <li><label><input type="checkbox" id="checkbox"><span>⅛ teaspoon salt</span></label></li>
+                                <li><label><input type="checkbox" id="checkbox"><span>¼ cup evaporated milk</span></label></li>
+                                <li><label><input type="checkbox" id="checkbox"><span>a dash vanilla extract</span></label></li>
                             </ul>
 
                             <h5>Pastry Dough</h5>
                                 <ul>
-                                    <li>2 cups  cake flour</li>
-                                    <li>1 stick 115 g  unsalted butter</li>
-                                    <li>¼ cup  powdered sugar</li> 
-                                    <li>2 tablespoons  egg</li>
-                                    <li>⅛ teaspoon  salt</li>
-                                    <li>a dash vanilla extract</li>
+                                    <li><label><input type="checkbox" id="checkbox"><span>2 cups  cake flour</span></label></li>
+                                    <li><label><input type="checkbox" id="checkbox"><span>1 stick 115 g  unsalted butter</span></label></li>
+                                    <li><label><input type="checkbox" id="checkbox"><span>¼ cup  powdered sugar</span></label></li> 
+                                    <li><label><input type="checkbox" id="checkbox"><span>2 tablespoons  egg</span></label></li>
+                                    <li><label><input type="checkbox" id="checkbox"><span>⅛ teaspoon  salt</span></label></li>
+                                    <li><label><input type="checkbox" id="checkbox"><span>a dash vanilla extract</span></label></li>
                                 </ul>
                     </div>
                     
