Add prep time table

--- a/index.html
+++ b/index.html
@@ -61,6 +61,26 @@
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
+       <div class="tbl">
+            <table class="table table-bordered">
+                    <thead>
+                      <tr>
+                        <th scope="col">Yields</th>
+                        <th scope="col">Prep Time</th>
+                        <th scope="col">Total Time</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>16 servings</td>
+                        <td>30 Minutes</td>
+                        <td>1 Hour</td>
+                      </tr>
+                    </tbody>
+            </table>
+       </div>
+        
+
         <div class="row">
             <div class="col-lg-6 col-md-6 col-xs-12 left">
                 <h3 class="title"><a id="origin">Origins</a></h3>
