--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous">
 </head>
 
-<body>
+<body id="bootstrap-overrides">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="file:///Users/isabelleyiu/Documents/Techtonica/techtonica-projects/recipe-page/index.html">Home</a>
